--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1 class="text-center mt-5 text-danger">Fizz<span class="text-info">Buzz</span></h1>
     <div class="input-group mt-3 w-25 mx-auto">
         <input type="number" class="form-control input-number" placeholder="Enter number" aria-label="enter number" aria-describedby="button-addon2">
-        <button class="btn btn-outline-danger button-check" type="button" id="button-addon2">Check</button>
+        <button class="btn btn-outline-danger button-check" type="submit" id="button-addon2">Check</button>
     </div>
     <div class="alert alert-info w-25 mx-auto mt-5 text-center result" role="alert">
        
